<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<!-- ************************************************************************************************* -->
	<!-- * General Section * -->
	<!-- ************************************************************************************************* -->
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.mars-sim</groupId>
	<artifactId>mars-sim</artifactId>
	<packaging>pom</packaging>
	<version>4.1</version>
	<name>mars-sim</name>
	<url>https://github.com/mars-sim/mars-sim</url>
	<inceptionYear>2009</inceptionYear>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>		
		<sonar.java.source>21</sonar.java.source>

		<timestamp>${maven.build.timestamp}</timestamp>
		<maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
		
		<!-- Set file encoding to UTF-8. See https://stackoverflow.com/questions/3017695/how-to-configure-encoding-in-maven#3018152 -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		
		<junit.version>6.1.0</junit.version>

		<lwjgl.version>3.3.6</lwjgl.version>
		<slf4j.version>2.0.18</slf4j.version>

		<commons-cli.version>1.11.0</commons-cli.version>
		<commons-io.version>2.22.0</commons-io.version>
		<commons-lang3.version>3.20.0</commons-lang3.version>
		<commons-math3.version>3.6.1</commons-math3.version>
			
		<jacoco.version>0.8.14</jacoco.version>		
	</properties>
	<profiles>
		<profile>
		  <id>coverage</id>
		  <build>
		   <plugins>
			<plugin>
			  <groupId>org.jacoco</groupId>
			 <artifactId>jacoco-maven-plugin</artifactId>
			  <version>${jacoco.version}</version>
			  <executions>
				<execution>
				  <id>prepare-agent</id>
				  <goals>
					<goal>prepare-agent</goal>
				  </goals>
				</execution>
				<execution>
				  <id>report</id>
				  <goals>
					<goal>report</goal>
				  </goals>
				  <configuration>
					<formats>
					  <format>XML</format>
					</formats>
				  </configuration>
				</execution>
			  </executions>
			</plugin>
		   </plugins>
		  </build>
		</profile>
		
		<!-- Profile for release -->
		<profile>
			<id>installer</id>
			<modules>
				<module>mars-sim-tools</module>
				<module>mars-sim-headless</module>
				<module>mars-sim-console</module>
				<module>mars-sim-core</module>
				<module>mars-sim-ui</module>
				<module>mars-sim-installer</module>
			</modules>
		</profile>
	</profiles>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>${junit.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-launcher</artifactId>
			<scope>test</scope>
		</dependency>		
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <scope>test</scope>
        </dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>5.23.0</version>
			<scope>test</scope>
		</dependency>
    </dependencies>
	<!-- ************************************************************************************************* -->
	<!-- * Developers Section * -->
	<!-- ************************************************************************************************* -->
	<developers>
		<developer>
			<name>Manny Kung</name>
			<roles>
				<role>developer</role>
			</roles>
			<timezone>-8</timezone>
		</developer>
		<developer>
			<name>Dennis Krenz</name>
			<roles>
				<role>conceptual design</role>
			</roles>
			<timezone>+2</timezone>
		</developer>
		<developer>
			<name>Barry Evans</name>
			<roles>
				<role>developer</role>
			</roles>
			<timezone>0</timezone>
		</developer>
	</developers>

	<!-- ************************************************************************************************* -->
	<!-- * Module Section * -->
	<!-- ************************************************************************************************* -->
	<modules>
    	<module>mars-sim-tools</module>
		<module>mars-sim-headless</module>
		<module>mars-sim-console</module>
		<module>mars-sim-core</module>
		<module>mars-sim-ui</module>
    	<module>mars-sim-dist</module>
	</modules>
</project>